1. One more education circles fix 2. Fixed card login 3. Fixed modal tab view for mobile 4. Fixed education item overflow

--- a/src/components/Admin/Config/AdminConfig.scss
+++ b/src/components/Admin/Config/AdminConfig.scss
@@ -17,6 +17,12 @@
 
 .modal-image {
   margin-right: 1rem;
+
+  @include maxWidth767 {
+    margin-right: 0;
+    margin-bottom: .5rem;
+  }
+
   &__wrapper {
     margin: 0 auto;
     border-radius: 50%;
@@ -58,6 +64,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @include maxWidth767 {
+      flex-direction: column;
+    }
   }
   .modal-status {
     display: flex;
