--- a/src/components/Index/IndexEducation/EducationList/EducationItem/EducationItem.scss
+++ b/src/components/Index/IndexEducation/EducationList/EducationItem/EducationItem.scss
@@ -42,6 +42,7 @@
   }
   &__title {
     display: flex;
+    flex-wrap: wrap;
     color: $c-primary;
     font-size: 1.2rem;
     letter-spacing: .8px;
