--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -12,5 +12,9 @@
   }
   &__wrapper {
     width: 50%;
+
+    @include maxWidth767 {
+      width: 100%;
+    }
   }
 }
